WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269123
[Wasm-GC] Fix assertions for global init import case
https://bugs.webkit.org/show_bug.cgi?id=269123
Summary
[Wasm-GC] Fix assertions for global init import case
Asumu Takikawa
Reported
2024-02-09 17:16:43 PST
In JSTests/wasm/gc/const-exprs.js if you change test cases in testConstExprGlobalOrdering() from "compile" to "instantiate" tests, you will get errors in a debug build due to some faulty assertions. These assertions just need to be updated to reflect the new constraints with Wasm GC.
Attachments
Add attachment
proposed patch, testcase, etc.
Asumu Takikawa
Comment 1
2024-02-09 18:29:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24197
EWS
Comment 2
2024-02-14 10:52:21 PST
Committed
274637@main
(803d3064cdeb): <
https://commits.webkit.org/274637@main
> Reviewed commits have been landed. Closing PR #24197 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-14 10:53:32 PST
<
rdar://problem/122958233
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug