[Wasm-GC] Fix assertions for global init import case https://bugs.webkit.org/show_bug.cgi?id=269123

Reviewed by Justin Michaud.

Fixes assertions for the "import" (referring to previous globals) case of
global init expressions. Also adds tests for various cases (including for
tables) to cover these cases better.

* JSTests/wasm/gc/const-exprs.js:
(async testConstExprGlobalOrdering):
* JSTests/wasm/gc/simd.js:
(testSIMDGlobal):
* JSTests/wasm/gc/table_init.js:
* Source/JavaScriptCore/wasm/js/WebAssemblyModuleRecord.cpp:
(JSC::WebAssemblyModuleRecord::initializeExports):

Canonical link: https://commits.webkit.org/274637@main